@@ -42,14 +42,9 @@ module SwitchTower
       def checkout(actor)
         svn = configuration[:svn] ? configuration[:svn] : "svn"
 
-        command = <<-CMD
-          if [[ -d #{actor.release_path} ]]; then
-            #{svn} up -q -r#{latest_revision} #{actor.release_path};
-          else
-            #{svn} co -q -r#{latest_revision} #{configuration.repository} #{actor.release_path};
-          fi
-        CMD
-        actor.run(command) do |ch, stream, out|
+        command = "#{svn} co -q -r#{latest_revision} #{configuration.repository} #{actor.release_path};"
+
+        run_checkout(actor, command) do |ch, stream, out|
           prefix = "#{stream} :: #{ch[:host]}"
           actor.logger.info out, prefix
           if out =~ /^Password.*:/
@@ -72,7 +67,7 @@ module SwitchTower
       end
 
       private
-      
+
         def svn_log(path)
           `svn log -q -rhead #{path}`
         end
